# minkipc

./: CMakeLists.txt
.github/actions/build_minkipc/: action.yml
.github/actions/build_qcbor/: action.yml
.github/actions/build_quic-teec/: action.yml
.github/actions/pull_docker_image/: action.yml
.github/actions/sync/: action.yml
.github/workflows/: loading.yml  pre_merge.yml  run_armor.yml  sync_build.yml  test.yml
ci/: CONFIG.json  build.sh  build32.sh
libminkadaptor/: CMakeLists.txt
libminkadaptor/src/: supplicant.c  syscall32.S
libminkadaptor/tests/smcinvoke_client/src/: smcinvoke_client.cpp  smcinvoke_client.h
libminkteec/include/: tee_client_api.h
libminkteec/src/: CWait.c  mink_teec.c  qlist.h
libminkteec/tests/gp_test_client/: CMakeLists.txt
libminkteec/tests/gp_test_client/src/: gp_load_ta.c
listeners/libfsservice/cmn/: cmn.h  helper.c
listeners/libfsservice/fs/: CMakeLists.txt  fs.c
listeners/libfsservice/gpfs/: CMakeLists.txt
listeners/librpmbservice/: CMakeLists.txt  README.md  rpmb.c  rpmb.h  rpmb_core.c  rpmb_emmc.c  rpmb_logging.c  rpmb_logging.h  rpmb_service.c  rpmb_ufs.c
listeners/libtimeservice/: CMakeLists.txt
listeners/listenercbo/src/: CListenerCBO.c
qtee_supplicant/: CMakeLists.txt  qcomtee-udev.rules.in  qteesupplicant.service.in  sfs_config.in  sfsconfig.service.in
qtee_supplicant/src/: listener_mngr.c  listener_mngr.h  qtee_supplicant.c
rpmb_client/idl/: CRPMBService.idl  IRPMBService.idl
ta/shikra/: FD02C9DA-306C-48C7-A49C-BBD827AE86EE.mbn  tzecotestapp.mbn
